# fuzzymar_multi_robot

./: CMakeLists.txt  package.xml
cfg/: kobukis.cfg
config/: dwa_local_planner_params.yaml  global_costmap_params.yaml
config/costmap_common_params/: kobuki_c.yaml  kobuki_e.yaml
config/ports/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
config/ports/costmap_common_params/: kobuki_a.yaml  kobuki_b.yaml  kobuki_c.yaml  kobuki_d.yaml  kobuki_e.yaml
config/velocity_smoother/: max_vel_kobuki_a.yaml  max_vel_kobuki_b.yaml  velocity_smoother.yaml
include/fuzzymar_multi_robot/: defs.h  probabilities.h  stimulus.h
launch/: robot_operation.launch
launch/experiment/: base_station.launch
launch/navigation/: amcl.launch  kobuki_navigation.launch  move_base.launch  move_base_ports.launch  velocity_smoother.launch
launch/nodes/: det_robot_operation_ports.launch  monitor.launch  monitor_ports.launch  pos_robot_operation_ports.launch  robot_operation.launch  robot_operation_ports.launch  task_ports.launch
launch/simulation/: gazebo.launch  model_state_setter.launch  simulated_mission.launch  simulated_playground.launch  spawn_kobukis.launch
maps/: quad_map.pgm  quad_map.yaml  rectangle.pgm  rectangle.yaml  srvlab.pgm  srvlab.yaml  srvlab_clean.pgm  srvlab_clean.yaml
missions/: default.txt  prova_1.txt  prova_costmap.txt  prova_ports_1.txt
missions/1_1_1/initial_poses/: kobuki_c.yaml
missions/2_2_1/robot_parameters/: common_params.yaml
missions/2_3_1/robot_parameters/: common_params.yaml
missions/3_1_1/: task_list.txt
missions/3_1_1/robot_parameters/: common_params.yaml
missions/3_2_1/robot_parameters/: common_params.yaml
missions/OLD/1_1_1/robot_parameters/: common_params.yaml
missions/OLD/1_2_1/robot_parameters/: common_params.yaml
missions/OLD/1_3_1/robot_parameters/: common_params.yaml
missions/OLD/2_1_1/robot_parameters/: common_params.yaml
missions/OLD/3_1_1/initial_poses/: kobuki_b.yaml
missions/OLD/3_3_1/robot_parameters/: common_params.yaml
missions/OLD/bateria_1/: task_list.txt
missions/OLD/bateria_1/initial_poses/: kobuki_a.yaml  kobuki_b.yaml  kobuki_c.yaml  kobuki_d.yaml  kobuki_e.yaml
missions/OLD/mostra/: task_list.txt
missions/OLD/new_prova_2/: task_list.txt
missions/bateria_1/robot_parameters/: common_params.yaml
missions/comp_OWA_1/robot_parameters/: common_params.yaml
missions/comp_OWA_2/initial_poses/: kobuki_a.yaml  kobuki_d.yaml
missions/comp_PR_1/: task_list.txt
missions/comp_PR_2/initial_poses/: kobuki_e.yaml
missions/default/robot_parameters/: common_params.yaml  kobuki_a.yaml
missions/experiment_3/robot_parameters/: common_params.yaml
missions/initial_poses/prova_1/: kobuki_a.yaml  kobuki_b.yaml  kobuki_c.yaml  kobuki_d.yaml  kobuki_e.yaml
missions/initial_poses/prova_ports_1/: kobuki_a.yaml
missions/med_MIN_1/robot_parameters/: common_params.yaml
missions/med_MIN_2/robot_parameters/: common_params.yaml
missions/med_OWA_1/: task_list.txt
missions/med_PR_1/robot_parameters/: common_params.yaml
missions/med_PR_2/initial_poses/: kobuki_c.yaml
missions/med_PR_2/robot_parameters/: common_params.yaml
missions/mostra/: task_list.txt
missions/mostra/robot_parameters/: common_params.yaml
missions/new_prova/: task_list.txt
missions/new_prova_2/robot_parameters/: common_params.yaml
missions/prova_1/robot_parameters/: common_params.yaml  kobuki_a.yaml  kobuki_b.yaml  kobuki_c.yaml  kobuki_d.yaml
missions/prova_2/: prova_2.txt
missions/prova_2/robot_parameters/: common_params.yaml  kobuki_e.yaml
missions/prova_definitiva/: task_list.txt
missions/prova_definitiva/initial_poses/: kobuki_a.yaml
missions/prova_definitiva/robot_parameters/: common_params.yaml
missions/robot_parameters/prova_1/: kobuki_b.yaml
missions/simple_OWA_2/robot_parameters/: common_params.yaml
missions/simple_PR_2/: task_list.txt
msg/: action_task.msg  action_task_w_ports.msg  mission.msg  missionArray.msg  port.msg  portsOfTask.msg  portsOfTaskArray.msg  robotParameters.msg  task.msg  taskArray.msg  taskObjective.msg  task_w_ports.msg  task_w_portsArray.msg  time_task.msg  token.msg
rviz/: fuzzymar_visualization.rviz  fuzzymar_visualization_ports.rviz
sh_files/: kobuki_navigation.sh  kobuki_navigation_experiment.sh  kobuki_navigation_ports.sh
simulation/environment/models/quad/: model.sdf
simulation/environment/worlds/: quad.wo  quad.world  rect.world  rectangle.world  srvlab_clean.world
simulation/includes/: robot.launch
simulation/sensors/xacro/: hokuyo.xacro
simulation/urdf/: kobuki_standalone.urdf.xacro
src/: det_robot_operation_ports.cpp  monitor.cpp  monitor_ports.cpp  pos_robot_operation_ports.cpp  probabilities.cpp  robot_operation.cpp  robot_operation_ports.cpp  stimulus.cpp  task_ports.cpp
ssh_connection/: bulbasur_login.sh  charmander_login.sh  ditto_login.sh  eevee_login.sh  pikachu_login.sh
urdf/: kobuki.urdf.xacro  kobuki_a.urdf.xacro  kobuki_b.urdf.xacro  kobuki_d.urdf.xacro
(+11 files in other folders)
